--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,78 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <RelativeLayout
+        android:id="@+id/turtle_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/turtle_playground"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_above="@+id/turtle_main_controls"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+        >
+            <RelativeLayout
+                android:id="@+id/turtle_square_layer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+            >
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/turtle_player_layer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+            >
+            </RelativeLayout>
+        </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/turtle_main_controls"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_above="@+id/turtle_meta_controls"
+            android:gravity="center"
+        >
+            <Button
+                android:text="@string/raise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+            <Button
+                android:text="@string/lower"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+            <Button
+                android:text="@string/plus_90deg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+            <Button
+                android:text="@string/minus_90deg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                tools:ignore="ButtonStyle" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/turtle_meta_controls"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            >
+            <Button
+                android:text="@string/fin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+        </LinearLayout>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
