--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,23 +23,12 @@
             android:id="@+id/turtle_main_controls"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_above="@+id/turtle_meta_controls"
-            android:gravity="center"
-        >
-            <Button
-                android:id="@+id/raise"
-                android:text="@string/raise"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp" />
-            <Button
-                android:id="@+id/lower"
-                android:text="@string/lower"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp" />
+            android:layout_above="@+id/turtle_raise_controls"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center">
             <Button
                 android:id="@+id/minus90Deg"
                 android:text="@string/minus_90deg"
@@ -55,14 +44,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/turtle_meta_controls"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            >
             <Button
                 android:id="@+id/move"
                 android:text="@string/move"
@@ -70,6 +51,44 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/turtle_raise_controls"
+            android:layout_above="@+id/turtle_meta_controls"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            >
+            <Button
+                android:id="@+id/raise"
+                android:text="@string/raise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+            <Button
+                android:id="@+id/lower"
+                android:text="@string/lower"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/turtle_meta_controls"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            >
             <Button
                 android:id="@+id/flush"
                 android:text="@string/flush"
